buildscript {
    dependencies {
        classpath 'org.postgresql:postgresql:42.7.3'
        classpath 'org.flywaydb:flyway-database-postgresql:10.15.0'
    }
}

plugins {
    id 'application'
    id 'java'
    id 'io.freefair.lombok' version '8.6'
    id 'org.springframework.boot' version '3.3.1'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'org.flywaydb.flyway' version '10.15.0'
}

dependencies {
    def springVersion = "3.3.1"
    def junitVersion = "5.10.2"
    
    implementation "org.springframework.boot:spring-boot-starter-actuator:$springVersion"
    implementation "org.springframework.boot:spring-boot-starter-web:$springVersion"
    implementation "org.springframework.boot:spring-boot-starter-security:$springVersion"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springVersion"

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'ch.qos.logback:logback-classic:1.5.6'

    runtimeOnly 'org.postgresql:postgresql:42.7.3'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.15.0'

    testImplementation("org.springframework.boot:spring-boot-starter-test:$springVersion") {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

bootJar {
    archiveFileName = 'user-mgmt-sys.jar'
}

application {
    mainClass = 'user.management.system.App'
}

configurations {
    implementation.exclude module: 'spring-boot-starter-logging'
    implementation.exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
}

spotless {
    java {
        removeUnusedImports()
        googleJavaFormat()
    }
}

flyway {
    url = 'jdbc:postgresql://expensively-roused-flathead.data-1.usw2.tembo.io:5432/postgres'
    // user = 'some.user'
    // password = 'some.password'
    // username and password provided as environment variables
}
